--- a/MarvalSoftware.Plugins.Teams.html
+++ b/MarvalSoftware.Plugins.Teams.html
@@ -287,7 +287,7 @@
      <fieldset>
     <legend id="teamsHeader">Chatbot Settings Page</legend>
          <button class="hrefButton" style="cursor:pointer;padding: 2px 12px;" id="generatepassword">Generate New Password</button>&nbsp;&nbsp;&nbsp;&nbsp;
-            <button class="hrefButton" style="cursor:pointer;padding: 2px 12px;" id="settingslogin">Load</button><br>
+            <button class="hrefButton" style="cursor:pointer;padding: 2px 12px;" id="settingslogin">Open Settings</button><br>
     </fieldset>
     <br>
     <!--<fieldset style="display: none;cursor:pointer;width: 800px" id="testPlugin">
